force-app/main/default/objects/Agent_Session__c/Agent_Session__c.object-meta.xml
<CustomObject>
    <description>A multi-turn conversation thread between a user and an agent. Each turn is an Agent_Run__c linked via Session__c.</description>
    <label>Agent Session</label>
    <nameField>
        <displayFormat>SES-{0000}</displayFormat>
        <label>Agent Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Sessions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>