force-app/main/default/objects/Agent_Session__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <description>DeveloperName of the Agent_Definition__mdt this session converses with.</description>
    <label>Agent</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>