force-app/main/default/objects/Agent_Session__c/fields/External_Ref__c.field-meta.xml
<CustomField>
    <fullName>External_Ref__c</fullName>
    <description>Opaque identifier for the end user of an external (non-Salesforce) client. When a conversation is driven through the REST API as a single integration user, this separates one external caller's threads from another's. Null for in-org (Lightning) sessions.</description>
    <externalId>true</externalId>
    <label>External Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>