force-app/main/default/objects/Agent_Session__c/fields/Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity__c</fullName>
    <description>Timestamp of the most recent turn; used for session list sorting and expiry.</description>
    <label>Last Activity</label>
    <type>DateTime</type>
</CustomField>