force-app/main/default/objects/Agent_Session__c/fields/Prompt_Version__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Prompt version this conversation is pinned to, resolved when the session starts. Every subsequent turn reuses it so a multi-turn thread cannot switch prompts mid-conversation.</description>
    <inlineHelpText
  >The prompt version every turn of this conversation uses.</inlineHelpText>
    <label>Prompt Version</label>
    <referenceTo>Agent_Prompt_Version__c</referenceTo>
    <relationshipLabel>Pinned Sessions</relationshipLabel>
    <relationshipName>Pinned_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>