force-app/main/default/objects/Agent_Session__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Rolling summary of compacted conversation history, maintained by HistoryCompactor (M1).</description>
    <label>Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>