force-app/main/default/objects/Agent_Session__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Display title for the thread. Defaults to the first user message, truncated.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>