force-app/main/default/objects/Agent_Session__c/fields/Turn_Count__c.field-meta.xml
<CustomField>
    <fullName>Turn_Count__c</fullName>
    <description>Number of completed turns (runs) in this session.</description>
    <label>Turn Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>