force-app/main/default/objects/Agent_Session__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who owns this conversation thread.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agent_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>